--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "clean": "rm -rf dist",
     "deploy": "npm run clean && npm run build && npm run cdk deploy -- --all",
+    "deploy:ci": "npm run clean && npm run build && npm run cdk deploy -- --require-approval never --all",
     "destroy": "npm run cdk destroy -- --all"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.137",
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.7",
     "aws-cdk": "2.140.0",
+    "esbuild": "^0.20.2",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
