Get lambda handler

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.569.0",
+    "@aws-sdk/lib-dynamodb": "^3.569.0",
     "aws-cdk-lib": "2.140.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
